--- a/example/client_api/README
+++ b/example/client_api/README
@@ -26,11 +26,11 @@ path to where Active Harmony has been installed.
 If HARMONY_HOME is set correctly, simply invoking the program name
 will begin a simple tuning example.
 
-    $ example_c
+    $ ./minimal
 
 To run in server mode, you can use the HARMONY_HOST and HARMONY_PORT
 environment variables:
 
-    $ HARMONY_HOST=h.server.org HARMONY_PORT=2012 example_c
+    $ HARMONY_HOST=h.server.org HARMONY_PORT=2012 ./minimal
 
 See the top-level README file for details.
